syntax = "proto3";

package redcarbon.external_api.agents.api.v1;

option go_package = "pkg.redcarbon.ai/proto/redcarbon/external_api/agents/api/v1;agentsExternalApiV1";

import "google/protobuf/timestamp.proto";
import "redcarbon/external_api/agents/api/v1/types.proto";

service AgentsExternalV1Srv {
  rpc HZ(HZReq)
      returns (HZRes) {}

  rpc PullConfigurations(PullConfigurationsReq)
      returns (PullConfigurationsRes) {}

  rpc SendSentinelOneData(SendSentinelOneDataReq)
      returns (SendSentinelOneDataRes) {}
  rpc SendGrayLogImpossibleTravelData(SendGrayLogImpossibleTravelDataReq)
      returns (SendGrayLogImpossibleTravelDataRes) {}
  rpc SendGrayLogDatamineQueryResultsData(SendGrayLogDatamineQueryResultsDataReq)
      returns (SendGrayLogDatamineQueryResultsDataRes) {}
  rpc SendGrayLogDatamineQueryErrorData (SendGrayLogDatamineQueryErrorDataReq)
      returns (SendGrayLogDatamineQueryErrorDataRes) {}

  rpc RefreshToken(RefreshTokenReq)
      returns (RefreshTokenRes) {}

  rpc GetGrayLogDataMinePendingQueries(GetGrayLogDataMinePendingQueriesReq)
      returns (GetGrayLogDataMinePendingQueriesRes) {}
}

message HZReq {
  string ip = 3;
  string hostname = 4;
}

message HZRes {
  google.protobuf.Timestamp received_at = 1;
}

message PullConfigurationsReq {
}

message PullConfigurationsRes {
  repeated AgentConfiguration agent_configurations = 1;
}

message SendSentinelOneDataReq {
  string agent_configuration_id = 1;
  string data = 2;
}

message SendSentinelOneDataRes {
  google.protobuf.Timestamp received_at = 1;
}

message SendGrayLogImpossibleTravelDataReq {
  string agent_configuration_id = 1;
  string user = 2;
  repeated string ips = 3;
  repeated string countries = 4;
  repeated GrayLogImpossibleTravelLog impossible_travel_logs = 5;
}

message SendGrayLogImpossibleTravelDataRes {
  google.protobuf.Timestamp received_at = 1;
}

message SendGrayLogDatamineQueryResultsDataReq {
  string agent_configuration_id = 1;
  string query_id = 2;
  repeated GrayLogDataMineResult results = 3;
}

message SendGrayLogDatamineQueryResultsDataRes {
  google.protobuf.Timestamp received_at = 1;
}

message SendGrayLogDatamineQueryErrorDataReq {
  string agent_configuration_id = 1;
  string query_id = 2;
  string error = 3;
}

message SendGrayLogDatamineQueryErrorDataRes {
  google.protobuf.Timestamp received_at = 1;
}

message RefreshTokenReq {
}

message RefreshTokenRes {
  string token = 1;
  string refresh_token = 2;
}

message GetGrayLogDataMinePendingQueriesReq {
  string agent_configuration_id = 1;
}

message GetGrayLogDataMinePendingQueriesRes {
  repeated GrayLogDataMineQuery graylog_datamine_queries = 1;
}
